# Medusa

./: .cursorrules  .gitignore  INSTALL.md  MEDUSA-INFO.md  MEDUSA_BLUEPRINT.md  MEDUSA_DETECTION_SPEC.md  MEDUSA_HACKER_GUIDE.md  Medusa_Operations.spec  Medusa_v5.spec  README.md  _final_check.py  build_errors.txt  build_errors_full.txt  check_corpus.py  config.yaml  config_medusa.yaml  luna.bat  luna.py  medusa_dashboard.py  pyproject.toml  pyproject_medusa.toml  read_pdf.py  requirements-dev.txt  requirements.txt  test_luna_fs.py  test_piper_streaming.py  test_suite.py  verify_sync.py
medusa/engine/: __init__.py  cli.py  main.py  pyproject.toml
medusa/engine/api/: __init__.py  websocket.py
medusa/engine/api/routes/: __init__.py  blueteam.py  findings.py  reports.py  scans.py  sessions.py  settings.py
medusa/engine/core/: __init__.py  ai_engine.py  analytics.py  config.py  dependency_check.py  logger.py  models.py  oob_listener.py  rate_limiter.py  scope_guard.py  session.py  ws_broadcaster.py
medusa/engine/modules/: __init__.py
medusa/engine/modules/ai/: __init__.py  analyst.py  chain_builder.py  chat.py  grounding_knowledge.json  hacker_llm.py  long_term_memory.json  luna_persona.md  report_writer.py  triage.py
medusa/engine/modules/blueteam/: __init__.py  detection_engine.py  hardening_advisor.py  ioc_extractor.py  siem_exporter.py  sigma_generator.py  (+2 more)
medusa/engine/output/: __init__.py  csv_exporter.py  evidence_vault.py  jira_export.py  report_engine.py  sarif_export.py
medusa/engine/payloads/: __init__.py  corpus_builder.py
medusa/engine/tests/: __init__.py
(+131 files in other folders)
